# actions-demo

./: pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
code/: the_big_program.py
tests/: requirements.txt  test_the_big_program.py
